compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__bit_string_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 148
expression: "\npub fn go(x) {\n  <<x:bit_string, \"Gleam\":utf8>>\n}\n"
---
import type * as _ from "../gleam.d.ts";

export function go(x: _.BitString): _.BitString;

