compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__empty_match.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
expression: "\nfn go(x) {\n  assert <<>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 0)) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  return x;
}

