compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__explicit_sized.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
expression: "\nfn go() {\n  <<256:size(4)>>\n}\n"
---
import { toBitString, sizedInt } from "../gleam.mjs";

function go() {
  return toBitString([sizedInt(256, 4)]);
}

