compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__integer.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 38
expression: "\nfn go() {\n  <<256:int>>\n}\n"
---
import { toBitString } from "../gleam.mjs";

function go() {
  return toBitString([256]);
}

