compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__match_sized.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
expression: "\nfn go(x) {\n  let <<a:16, b:8>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 3)) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2);
  let b = x.intFromSlice(2, 3);
  return x;
}

