compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__one.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
expression: "\nfn go() {\n  <<256>>\n}\n"

---
import { toBitString } from "../gleam.mjs";

function go() {
  return toBitString([256]);
}

