compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__two.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 27
expression: "\nfn go() {\n  <<256, 4>>\n}\n"
---
import { toBitString } from "../gleam.mjs";

function go() {
  return toBitString([256, 4]);
}

