compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__utf8.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 104
expression: "\nfn go(x) {\n  <<256, 4, x, \"Gleam\":utf8>>\n}\n"
---
import { toBitString, stringBits } from "../gleam.mjs";

function go(x) {
  return toBitString([256, 4, x, stringBits("Gleam")]);
}

