compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__utf8_codepoint.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 115
expression: "\nfn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
---
import { toBitString, stringBits, codepointBits } from "../gleam.mjs";

function go(x) {
  return toBitString([codepointBits(x), stringBits("Gleam")]);
}

