compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__utf8_codepoint_typescript.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 126
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
---
import type * as _ from "../gleam.d.ts";

export function go(x: _.UtfCodepoint): _.BitString;

